<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4020.12">
  <DUT Name="ST_IO" Id="{4bf85b02-8806-43c6-a831-890c567af3d5}">
    <Declaration><![CDATA[TYPE ST_IO :
STRUCT
	stOut: ST_Out;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>